--- a/BlazorApp7/BlazorApp7/Components/Account/Pages/ConfirmEmail.razor
+++ b/BlazorApp7/BlazorApp7/Components/Account/Pages/ConfirmEmail.razor
@@ -10,8 +10,11 @@
 
 <PageTitle>Confirm email</PageTitle>
 
-<h1>Confirm email</h1>
-<StatusMessage Message="@statusMessage" />
+<div class="mx-auto mt-8 max-w-lg">
+    <Heading1>Confirm email</Heading1>
+
+    <StatusMessage Message="@statusMessage" />
+</div>
 
 @code {
     private string? statusMessage;
