--- a/BlazorApp7/BlazorApp7/Components/Account/Pages/ConfirmEmailChange.razor
+++ b/BlazorApp7/BlazorApp7/Components/Account/Pages/ConfirmEmailChange.razor
@@ -11,9 +11,11 @@
 
 <PageTitle>Confirm email change</PageTitle>
 
-<h1>Confirm email change</h1>
+<Heading1>Confirm email change</Heading1>
 
-<StatusMessage Message="@message" />
+<div class="mx-auto mt-8 max-w-lg">
+    <StatusMessage Message="@message" />
+</div>
 
 @code {
     private string? message;
