--- a/BlazorApp7/BlazorApp7/Components/Account/Pages/InvalidPasswordReset.razor
+++ b/BlazorApp7/BlazorApp7/Components/Account/Pages/InvalidPasswordReset.razor
@@ -2,7 +2,12 @@
 
 <PageTitle>Invalid password reset</PageTitle>
 
-<h1>Invalid password reset</h1>
-<p role="alert">
-    The password reset link is invalid.
-</p>
+<div class="mx-auto mt-8 max-w-lg">
+
+    <Heading1>Invalid password reset</Heading1>
+
+    <p class="my-4">
+        The password reset link is invalid.
+    </p>
+
+</div>
