--- a/BlazorApp7/BlazorApp7/Components/Account/Pages/InvalidUser.razor
+++ b/BlazorApp7/BlazorApp7/Components/Account/Pages/InvalidUser.razor
@@ -2,6 +2,12 @@
 
 <PageTitle>Invalid user</PageTitle>
 
-<h3>Invalid user</h3>
+<div class="mx-auto mt-8 max-w-lg">
 
-<StatusMessage />
+    <Heading3>Invalid user</Heading3>
+
+    <div class="max-w-xl">
+        <StatusMessage />
+    </div>
+
+</div>
