--- a/BlazorApp7/BlazorApp7/Components/Account/Pages/Lockout.razor
+++ b/BlazorApp7/BlazorApp7/Components/Account/Pages/Lockout.razor
@@ -2,7 +2,11 @@
 
 <PageTitle>Locked out</PageTitle>
 
-<header>
-    <h1 class="text-danger">Locked out</h1>
-    <p class="text-danger" role="alert">This account has been locked out, please try again later.</p>
-</header>
+<div class="mx-auto mt-8 max-w-lg">
+
+    <header>
+        <Heading1>Locked out</Heading1>
+        <p class="my-4 text-danger">This account has been locked out, please try again later.</p>
+    </header>
+
+</div>
