--- a/BlazorApp7/BlazorApp7/Components/Account/Pages/Manage/EnableAuthenticator.razor
+++ b/BlazorApp7/BlazorApp7/Components/Account/Pages/Manage/EnableAuthenticator.razor
@@ -6,6 +6,7 @@
 @using System.Text.Encodings.Web
 @using Microsoft.AspNetCore.Identity
 @using BlazorApp7.Data
+@using static BlazorApp7.Components.Account.Pages.Login
 
 @inject UserManager<ApplicationUser> UserManager
 @inject IdentityUserAccessor UserAccessor
@@ -21,48 +22,62 @@
 }
 else
 {
-    <StatusMessage Message="@message" />
-    <h3>Configure authenticator app</h3>
-    <div>
-        <p>To use an authenticator app go through the following steps:</p>
-        <ol class="list">
-            <li>
-                <p>
-                    Download a two-factor authenticator app like Microsoft Authenticator for
-                    <a href="https://go.microsoft.com/fwlink/?Linkid=825072">Android</a> and
-                    <a href="https://go.microsoft.com/fwlink/?Linkid=825073">iOS</a> or
-                    Google Authenticator for
-                    <a href="https://play.google.com/store/apps/details?id=com.google.android.apps.authenticator2&amp;hl=en">Android</a> and
-                    <a href="https://itunes.apple.com/us/app/google-authenticator/id388497605?mt=8">iOS</a>.
-                </p>
-            </li>
-            <li>
-                <p>Scan the QR Code or enter this key <kbd>@sharedKey</kbd> into your two factor authenticator app. Spaces and casing do not matter.</p>
-                <div class="alert alert-info">Learn how to <a href="https://go.microsoft.com/fwlink/?Linkid=852423">enable QR code generation</a>.</div>
-                <div></div>
-                <div data-url="@authenticatorUri"></div>
-            </li>
-            <li>
-                <p>
-                    Once you have scanned the QR code or input the key above, your two factor authentication app will provide you
-                    with a unique code. Enter the code in the confirmation box below.
-                </p>
-                <div class="row">
-                    <div class="col-xl-6">
-                        <EditForm Model="Input" FormName="send-code" OnValidSubmit="OnValidSubmitAsync" method="post">
-                            <DataAnnotationsValidator />
-                            <div class="form-floating mb-3">
-                                <InputText @bind-Value="Input.Code" id="Input.Code" class="form-control" autocomplete="off" placeholder="Enter the code" />
-                                <label for="Input.Code" class="control-label form-label">Verification Code</label>
-                                <ValidationMessage For="() => Input.Code" class="text-danger" />
-                            </div>
-                            <button type="submit" class="w-100 btn btn-lg btn-primary">Verify</button>
-                            <ValidationSummary class="text-danger" role="alert" />
-                        </EditForm>
+    <Heading3>Configure authenticator app</Heading3>
+
+    <div class="max-w-xl" data-module="pages/Account/Manage/EnableAuthenticator.mjs">
+        <StatusMessage class="mb-3" />
+        <div>
+            <p>To use an authenticator app go through the following steps:</p>
+            <ol class="list-decimal ml-8">
+                <li>
+                    <p class="my-2">
+                        Download a two-factor authenticator app like Microsoft Authenticator for
+                        <HyperLink class="font-semibold" href="https://go.microsoft.com/fwlink/?Linkid=825072">Android</HyperLink> and
+                        <HyperLink class="font-semibold" href="https://go.microsoft.com/fwlink/?Linkid=825073">iOS</HyperLink> or
+                        Google Authenticator for
+                        <HyperLink class="font-semibold" href="https://play.google.com/store/apps/details?id=com.google.android.apps.authenticator2&amp;hl=en">Android</HyperLink> and
+                        <HyperLink class="font-semibold" href="https://itunes.apple.com/us/app/google-authenticator/id388497605?mt=8">iOS</HyperLink>.
+                    </p>
+                </li>
+                <li>
+                    <p class="my-2">
+                        Scan the QR Code or enter this key <kbd class="bg-gray-100 dark:bg-gray-800 p-1 px-2 rounded-sm">@sharedKey</kbd> into your two factor authenticator app. Spaces and casing do not matter.
+                    </p>
+
+                    <Alert class="my-4" Type="AlertType.Information">
+                        Learn how to <HyperLink class="font-semibold" href="https://go.microsoft.com/fwlink/?Linkid=852423">enable QR code generation</HyperLink>.
+                    </Alert>
+
+                    <div data-permanent id="qrCode"></div>
+                    <div id="qrCodeData" data-url="@authenticatorUri"></div>
+                </li>
+                <li>
+                    <p class="my-2">
+                        Once you have scanned the QR code or input the key above, your two factor authentication app will provide you
+                        with a unique code. Enter the code in the confirmation box below.
+                    </p>
+                    <div>
+                        <div class="max-w-xs">
+                            <EditForm id="send-code" Model="Input" FormName="send-code" OnValidSubmit="OnValidSubmitAsync" method="post">
+                                <DataAnnotationsValidator />
+                                <ValidationSummary class="mb-3 text-danger text-center font-semibold" />
+
+                                <div class="flex flex-col gap-4">
+                                    <div>
+                                        <label for="code" class="@TextInput.LabelClasses">Verification Code</label>
+                                        <div class="mt-1 relative rounded-md shadow-sm">
+                                            <InputText id="code" type="text" @bind-Value="Input.Code" class="@TextInput.InputClasses" autocomplete="off" placeholder="Please enter the code." />
+                                        </div>
+                                        <ValidationMessage For="() => Input.Code" class="mt-2 text-danger text-sm" />
+                                    </div>
+                                    <Button type="submit">Verify</Button>
+                                </div>
+                            </EditForm>
+                        </div>
                     </div>
-                </div>
-            </li>
-        </ol>
+                </li>
+            </ol>
+        </div>
     </div>
 }
 
