--- a/BlazorApp7/BlazorApp7/Components/Account/Pages/ResetPasswordConfirmation.razor
+++ b/BlazorApp7/BlazorApp7/Components/Account/Pages/ResetPasswordConfirmation.razor
@@ -1,7 +1,12 @@
 ﻿@page "/Account/ResetPasswordConfirmation"
 <PageTitle>Reset password confirmation</PageTitle>
 
-<h1>Reset password confirmation</h1>
-<p role="alert">
-    Your password has been reset. Please <a href="Account/Login">click here to log in</a>.
-</p>
+<div class="mx-auto mt-8 max-w-lg">
+
+    <Heading1>Reset password confirmation</Heading1>
+
+    <p class="my-4">
+        Your password has been reset. Please <HyperLink class="font-semibold" href="Account/Login">click here to log in</HyperLink>.
+    </p>
+
+</div>
