--- a/BlazorApp7/BlazorApp7/Components/Layout/LandingLayout.razor
+++ b/BlazorApp7/BlazorApp7/Components/Layout/LandingLayout.razor
@@ -2,9 +2,9 @@
 
 @layout MainLayout
 
-<div class="mx-auto mb-20 mt-8 max-w-fit">
+@* <div class="mx-auto mb-20 mt-8 max-w-fit"> *@
     @Body
-</div>
+@* </div> *@
 
 @code {
 
