--- a/BlazorApp7/BlazorApp7/Components/Account/Pages/ForgotPasswordConfirmation.razor
+++ b/BlazorApp7/BlazorApp7/Components/Account/Pages/ForgotPasswordConfirmation.razor
@@ -2,7 +2,11 @@
 
 <PageTitle>Forgot password confirmation</PageTitle>
 
-<h1>Forgot password confirmation</h1>
-<p role="alert">
-    Please check your email to reset your password.
-</p>
+<div class="mx-auto mt-8 max-w-lg">
+    <Heading1>Forgot password confirmation</Heading1>
+
+    <p class="my-4">
+        Please check your email to reset your password.
+    </p>
+</div>
+
