--- a/BlazorApp7/BlazorApp7/Components/Account/Pages/Manage/Disable2fa.razor
+++ b/BlazorApp7/BlazorApp7/Components/Account/Pages/Manage/Disable2fa.razor
@@ -10,24 +10,27 @@
 
 <PageTitle>Disable two-factor authentication (2FA)</PageTitle>
 
-<StatusMessage />
-<h3>Disable two-factor authentication (2FA)</h3>
+<Heading3>Disable two-factor authentication (2FA)</Heading3>
 
-<div class="alert alert-warning" role="alert">
-    <p>
-        <strong>This action only disables 2FA.</strong>
-    </p>
-    <p>
-        Disabling 2FA does not change the keys used in authenticator apps. If you wish to change the key
-        used in an authenticator app you should <a href="Account/Manage/ResetAuthenticator">reset your authenticator keys.</a>
-    </p>
-</div>
+<div class="max-w-xl">
+    <StatusMessage />
 
-<div>
-    <form @formname="disable-2fa" @onsubmit="OnSubmitAsync" method="post">
-        <AntiforgeryToken />
-        <button class="btn btn-danger" type="submit">Disable 2FA</button>
-    </form>
+    <Alert Type="AlertType.Warning">
+        <p class="mb-3">
+            <strong>This action only disables 2FA.</strong>
+        </p>
+        <p class="mb-3">
+            Disabling 2FA does not change the keys used in authenticator apps. If you wish to change the key
+            used in an authenticator app you should <a href="Account/Manage/ResetAuthenticator">reset your authenticator keys.</a>
+        </p>
+    </Alert>
+
+    <div class="mt-4">
+        <form @formname="disable-2fa" @onsubmit="OnSubmitAsync" method="post">
+            <AntiforgeryToken />
+            <Button Variant="ButtonVariant.Destructive" type="submit">Disable 2FA</Button>
+        </form>
+    </div>
 </div>
 
 @code {
