--- a/BlazorApp7/BlazorApp7/Components/Account/Pages/Manage/GenerateRecoveryCodes.razor
+++ b/BlazorApp7/BlazorApp7/Components/Account/Pages/Manage/GenerateRecoveryCodes.razor
@@ -10,34 +10,35 @@
 
 <PageTitle>Generate two-factor authentication (2FA) recovery codes</PageTitle>
 
-@if (recoveryCodes is not null)
-{
-    <ShowRecoveryCodes RecoveryCodes="recoveryCodes.ToArray()" StatusMessage="@message" />
-}
-else
-{
-    <h3>Generate two-factor authentication (2FA) recovery codes</h3>
-    <div class="alert alert-warning" role="alert">
-        <p>
-            <span class="glyphicon glyphicon-warning-sign"></span>
-            <strong>Put these codes in a safe place.</strong>
-        </p>
-        <p>
-            If you lose your device and don't have the recovery codes you will lose access to your account.
-        </p>
-        <p>
-            Generating new recovery codes does not change the keys used in authenticator apps. If you wish to change the key
-            used in an authenticator app you should <a href="Account/Manage/ResetAuthenticator">reset your authenticator keys.</a>
-        </p>
-    </div>
-    <div>
-        <form @formname="generate-recovery-codes" @onsubmit="OnSubmitAsync" method="post">
-            <AntiforgeryToken />
-            <button class="btn btn-danger" type="submit">Generate Recovery Codes</button>
-        </form>
-    </div>
-}
-
+<div class="max-w-xl">
+    @if (recoveryCodes is not null)
+    {
+        <ShowRecoveryCodes RecoveryCodes="recoveryCodes.ToArray()" StatusMessage="@message" />
+    }
+    else
+    {
+        <Heading3>Generate two-factor authentication (2FA) recovery codes</Heading3>
+        <Alert Type="AlertType.Warning">
+            <p class="mb-3">
+                <strong>Put these codes in a safe place.</strong>
+            </p>
+            <p class="mb-3">
+                If you lose your device and don't have the recovery codes you will lose access to your account.
+            </p>
+            <p class="mb-3">
+                Generating new recovery codes does not change the keys used in authenticator apps. 
+                If you wish to change the key used in an authenticator app you should
+                <HyperLink class="font-semibold" href="Account/Manage/ResetAuthenticator">reset your authenticator keys.</HyperLink>
+            </p>
+        </Alert>
+        <div class="mt-4">
+            <form @formname="generate-recovery-codes" @onsubmit="OnSubmitAsync" method="post">
+                <AntiforgeryToken />
+                <Button Variant="ButtonVariant.Destructive" type="submit">Generate Recovery Codes</Button>
+            </form>
+        </div>
+    }
+</div>
 @code {
     private string? message;
     private ApplicationUser user = default!;
