--- a/BlazorApp7/BlazorApp7/Components/Account/Pages/Manage/PersonalData.razor
+++ b/BlazorApp7/BlazorApp7/Components/Account/Pages/Manage/PersonalData.razor
@@ -4,33 +4,23 @@
 
 <PageTitle>Personal Data</PageTitle>
 
-<StatusMessage />
-<h3 class="mb-6 text-2xl font-bold">Personal Data</h3>
+<Heading3>Personal Data</Heading3>
 
-<div class="mx-auto max-w-4xl space-y-6">
-    <div class="space-y-4">
-        <p class="text-gray-700">
-            Your account contains personal data that you have given us. This page allows you to download or delete that data.
-        </p>
-        <p class="text-sm text-red-600">
+<div class="max-w-xl">
+    <StatusMessage />
+
+    <div class="flex flex-col gap-4">
+        <p>Your account contains personal data that you have given us. This page allows you to download or delete that data.</p>
+        <p>
             <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
         </p>
-
-        <div class="flex flex-row">
-            <!-- Download Personal Data Form -->
-            <form action="Account/Manage/DownloadPersonalData" method="post">
-                <AntiforgeryToken />
-                <Button
-                        class="rounded-md bg-blue-600 px-4 py-2 text-white hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2">
-                    Download
-                </Button>
-            </form>
-            <div class="flex flex-grow"></div>
-            <!-- Delete Personal Data Link -->
-            <a href="Account/Manage/DeletePersonalData" class="text-red-600">
-                Delete
-            </a>
-        </div>
+        <form id="download-data" action="Account/Manage/DownloadPersonalData" method="post">
+            <AntiforgeryToken />
+            <Button type="submit">Download</Button>
+        </form>
+        <p>
+            <Button Variant="ButtonVariant.Destructive" id="delete" href="Account/Manage/DeletePersonalData">Delete</Button>
+        </p>
     </div>
 </div>
 
