--- a/BlazorApp7/BlazorApp7/Components/Account/Pages/Manage/SetPassword.razor
+++ b/BlazorApp7/BlazorApp7/Components/Account/Pages/Manage/SetPassword.razor
@@ -3,6 +3,7 @@
 @using System.ComponentModel.DataAnnotations
 @using Microsoft.AspNetCore.Identity
 @using BlazorApp7.Data
+@using static BlazorApp7.Components.Account.Pages.Login
 
 @inject UserManager<ApplicationUser> UserManager
 @inject SignInManager<ApplicationUser> SignInManager
@@ -11,30 +12,44 @@
 
 <PageTitle>Set password</PageTitle>
 
-<h3>Set your password</h3>
-<StatusMessage Message="@message" />
-<p class="text-info">
-    You do not have a local username/password for this site. Add a local
-    account so you can log in without an external login.
-</p>
-<div class="row">
-    <div class="col-xl-6">
-        <EditForm Model="Input" FormName="set-password" OnValidSubmit="OnValidSubmitAsync" method="post">
-            <DataAnnotationsValidator />
-            <ValidationSummary class="text-danger" role="alert" />
-            <div class="form-floating mb-3">
-                <InputText type="password" @bind-Value="Input.NewPassword" id="Input.NewPassword" class="form-control" autocomplete="new-password" placeholder="Enter the new password" />
-                <label for="Input.NewPassword" class="form-label">New password</label>
-                <ValidationMessage For="() => Input.NewPassword" class="text-danger" />
-            </div>
-            <div class="form-floating mb-3">
-                <InputText type="password" @bind-Value="Input.ConfirmPassword" id="Input.ConfirmPassword" class="form-control" autocomplete="new-password" placeholder="Enter the new password" />
-                <label for="Input.ConfirmPassword" class="form-label">Confirm password</label>
-                <ValidationMessage For="() => Input.ConfirmPassword" class="text-danger" />
-            </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Set password</button>
-        </EditForm>
-     </div>
+<Heading3>Set your password</Heading3>
+
+<div class="max-w-xl">
+    <StatusMessage class="mb-3" Message="@message" />
+
+    <p class="text-info">
+        You do not have a local username/password for this site. Add a local
+        account so you can log in without an external login.
+    </p>
+
+    <div class="mt-3 overflow-hidden shadow sm:rounded-md">
+        <div class="bg-white px-4 dark:bg-black sm:p-6">
+            <EditForm id="set-password-form" Model="Input" FormName="set-password" OnValidSubmit="OnValidSubmitAsync" method="post">
+                <DataAnnotationsValidator />
+                <ValidationSummary class="mb-3 text-center font-semibold text-danger" />
+
+                <div class="flex flex-col gap-4">
+                    <div>
+                        <label for="new-password" class="@TextInput.LabelClasses">New password</label>
+                        <div class="relative mt-1 rounded-md shadow-sm">
+                            <InputText id="new-password" type="password" @bind-Value="Input.NewPassword" class="@TextInput.InputClasses" autocomplete="new-password" placeholder="Please enter your new password." />
+                        </div>
+                        <ValidationMessage For="() => Input.NewPassword" class="mt-2 text-danger text-sm" />
+                    </div>
+                    <div>
+                        <label for="confirm-password" class="@TextInput.LabelClasses">Confirm password</label>
+                        <div class="relative mt-1 rounded-md shadow-sm">
+                            <InputText id="confirm-password" type="password" @bind-Value="Input.ConfirmPassword" class="@TextInput.InputClasses" autocomplete="new-password" placeholder="Please confirm your new password." />
+                        </div>
+                        <ValidationMessage For="() => Input.ConfirmPassword" class="mt-2 text-danger text-sm" />
+                    </div>
+                    <div>
+                        <Button type="submit">Set password</Button>
+                    </div>
+                </div>
+            </EditForm>
+        </div>
+    </div>
 </div>
 
 @code {
