--- a/BlazorApp7/BlazorApp7/Components/Account/Pages/RegisterConfirmation.razor
+++ b/BlazorApp7/BlazorApp7/Components/Account/Pages/RegisterConfirmation.razor
@@ -12,21 +12,27 @@
 
 <PageTitle>Register confirmation</PageTitle>
 
-<h1>Register confirmation</h1>
+<div class="mx-auto mt-8 max-w-lg">
+    <Heading1>Register confirmation</Heading1>
 
-<StatusMessage Message="@statusMessage" />
+    <StatusMessage Message="@statusMessage" />
 
-@if (emailConfirmationLink is not null)
-{
-    <p>
-        This app does not currently have a real email sender registered, see <a href="https://aka.ms/aspaccountconf">these docs</a> for how to configure a real email sender.
-        Normally this would be emailed: <a href="@emailConfirmationLink">Click here to confirm your account</a>
-    </p>
-}
-else
-{
-    <p role="alert">Please check your email to confirm your account.</p>
-}
+    @if (emailConfirmationLink is not null)
+    {
+        <p class="my-4">
+            This app does not currently have a real email sender registered, see
+            <HyperLink class="font-semibold" href="https://aka.ms/aspaccountconf">these docs</HyperLink> for how to configure a real email sender.
+        </p>
+        <p class="my-4">
+            Normally this would be emailed:
+            <HyperLink class="font-semibold" id="confirm-link" href="@emailConfirmationLink">Click here to confirm your account</HyperLink>
+        </p>
+    }
+    else
+    {
+        <p class="my-4">Please check your email to confirm your account.</p>
+    }
+</div>
 
 @code {
     private string? emailConfirmationLink;
