--- a/BlazorApp7/BlazorApp7/Components/Account/Shared/ShowRecoveryCodes.razor
+++ b/BlazorApp7/BlazorApp7/Components/Account/Shared/ShowRecoveryCodes.razor
@@ -1,28 +1,34 @@
-﻿<StatusMessage Message="@StatusMessage" />
-<h3>Recovery codes</h3>
-<div class="alert alert-warning" role="alert">
-    <p>
-        <strong>Put these codes in a safe place.</strong>
-    </p>
-    <p>
-        If you lose your device and don't have the recovery codes you will lose access to your account.
-    </p>
-</div>
-<div class="row">
-    <div class="col-md-12">
-        @foreach (var recoveryCode in RecoveryCodes)
+﻿<Heading3>Recovery codes</Heading3>
+<div class="max-w-xl">
+    <StatusMessage Message="@StatusMessage" />
+
+    <Alert class="mt-4" Type="AlertType.Warning">
+        <p class="mb-3">
+            <strong>Put these codes in a safe place.</strong>
+        </p>
+        <p class="mb-3">
+            If you lose your device and don't have the recovery codes you will lose access to your account.
+        </p>
+    </Alert>
+
+    <div class="mt-4">
+        @for (var row = 0; row < RecoveryCodes.Length; row += 2)
         {
-            <div>
-                <code class="recovery-code">@recoveryCode</code>
-            </div>
+            <code class="recovery-code">@RecoveryCodes[row]</code>
+
+            <text>&nbsp;</text>
+
+            <code class="recovery-code">@RecoveryCodes[row + 1]</code>
+
+            <br />
         }
     </div>
 </div>
 
 @code {
     [Parameter]
-    public string[] RecoveryCodes { get; set; } = [];
+    public string[] RecoveryCodes { get; set; } = default!;
 
     [Parameter]
-    public string? StatusMessage { get; set; }
+    public string StatusMessage { get; set; } = default!;
 }
